fix(projects) spacing for company box when we have both suppliers and partners

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
@@ -144,6 +144,10 @@ article.type-proiect .companii {
   text-align: center;
 }
 
+article.type-proiect .companii .col-12:not(.first) {
+  padding-bottom: 45px;
+}
+
 article.type-proiect .companii h3 {
   margin-top: 60px;
   font-size: 16px;
